sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:3: error: not found: value debut
  debut = 0
  ^AlgCocktailSort2:5: error: not found: value fin
  fin = m -2 
  ^AlgCocktailSort2:9: error: not found: value debut
    for (i<- debut to fin){
             ^AlgCocktailSort2:9: error: not found: value fin
    for (i<- debut to fin){
                      ^AlgCocktailSort2:12: error: not found: value fin
          fin -= 1
          ^AlgCocktailSort2:16: error: not found: value fin
    for (i<- fin to debut){
             ^AlgCocktailSort2:16: error: not found: value debut
    for (i<- fin to debut){
                    ^AlgCocktailSort2:19: error: not found: value fin
          fin -= 1
          ^